# rs-text-codec

./: Cargo.toml  README.md  README.zh_CN.md
src/: ascii.rs  ascii_folding.rs  codecs.rs  lib.rs  parsing_position.rs  prelude.rs  text_coding_error.rs  text_decoder.rs  text_encoder.rs  text_encoding.rs  unicode.rs  unicode_bom.rs  unicode_error.rs  unicode_error_kind.rs  utf16.rs  utf32.rs  utf8.rs
src/charset/: ascii.rs  ascii_folding.rs  mod.rs  unicode.rs  utf16.rs  utf32.rs  utf8.rs
src/codec/: ascii_codec.rs  charset_codec.rs  charset_convert_error.rs  charset_converter.rs  charset_decoder.rs  charset_encoder.rs  coder.rs  coder_progress.rs  coder_status.rs  decode_status.rs  helpers.rs  inner.rs  latin1_codec.rs  malformed_action.rs  mod.rs  text_decoder.rs  text_encoder.rs  unmappable_action.rs  utf16_byte_codec.rs  utf16_byte_decoder.rs  utf16_byte_encoder.rs  utf16_u16_codec.rs  utf16_u16_decoder.rs  utf16_u16_encoder.rs  utf32_byte_codec.rs  utf32_byte_decoder.rs  utf32_byte_encoder.rs  utf32_u32_codec.rs  utf32_u32_decoder.rs  utf32_u32_encoder.rs  utf8_codec.rs  utf8_decoder.rs  utf8_encoder.rs
src/codecs/: helpers.rs  utf16_byte_codec.rs  utf16_byte_decoder.rs  utf16_byte_encoder.rs  utf16_u16_codec.rs  utf16_u16_decoder.rs  utf16_u16_encoder.rs  utf32_byte_codec.rs  utf32_byte_decoder.rs  utf32_byte_encoder.rs  utf32_u32_codec.rs  utf32_u32_decoder.rs  utf32_u32_encoder.rs  utf8_codec.rs  utf8_decoder.rs  utf8_encoder.rs
src/encoding/: byte_order.rs  charset.rs  mod.rs  text_encoding.rs  unicode_bom.rs
src/error/: charset_decode_error.rs  charset_decode_error_kind.rs  charset_encode_error.rs  charset_encode_error_kind.rs  mod.rs  text_coding_error.rs  text_decode_error.rs  text_decoding_error.rs  text_decoding_error_kind.rs  text_encode_error.rs  text_encoding_error.rs
src/io/: byte_order.rs  mod.rs
src/text_coding_error/: text_decoding_error.rs  text_encoding_error.rs  text_encoding_error_kind.rs
src/text_decoder/: decode_result.rs  decoded.rs  need_more.rs
src/text_encoder/: text_codec.rs
tests/: ascii_tests.rs  parsing_position_tests.rs  prelude_tests.rs  unicode_error_kind_tests.rs  unicode_error_tests.rs  unicode_tests.rs  utf16_tests.rs  utf8_tests.rs
tests/charset/: ascii_folding_tests.rs  ascii_tests.rs  mod.rs  unicode_tests.rs  utf16_tests.rs  utf32_tests.rs  utf8_tests.rs
tests/codec/: ascii_codec_tests.rs  charset_codec_tests.rs  charset_convert_error_tests.rs  charset_converter_tests.rs  charset_decoder_tests.rs  charset_encoder_tests.rs  coder_status_tests.rs  (+13 more)
(+55 files in other folders)
