[package]
name = "qubit-text-codec"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-text-codec"
description = "Buffer-oriented text encoding and decoding utilities for Rust"
homepage = "https://github.com/qubit-ltd/rs-text-codec"
documentation = "https://docs.rs/qubit-text-codec"
readme = "README.md"
keywords = ["text", "encoding", "codec", "unicode", "utf8"]
categories = ["encoding", "text-processing"]
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/README.zh_CN.md",
    "/doc/**/user_guide*.md",
    "/examples/**",
    "/resources/**",
    "/src/**",
    "/tests/**",
]

[lib]
name = "qubit_text_codec"
doctest = true

[[test]]
name = "error"
path = "tests/error/mod.rs"

[[test]]
name = "codec"
path = "tests/codec/mod.rs"

[[test]]
name = "charset"
path = "tests/charset/mod.rs"

[[test]]
name = "encoding"
path = "tests/encoding/mod.rs"

[[test]]
name = "io"
path = "tests/io/mod.rs"

[dependencies]
thiserror = "2.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
